--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,7 @@ body {
   justify-content: center;
   align-items: center;
   height: 100vh;
-  background-image: url('C:\Users\Bharat\OneDrive\Desktop\REACTBMI\mybmi\public\heightweight.jpg');
+  background-image: url('heightweight.jpg');
   background-size: cover;       /* scales image to cover the whole area */
   background-position: center;  /* centers the image */
   background-repeat: no-repeat; /* avoids repeating */
